RESOLVED FIXED109217
WebKit does not build when compiling with css3-text and css3-conditional-rules feature flags enabled.
https://bugs.webkit.org/show_bug.cgi?id=109217
Summary WebKit does not build when compiling with css3-text and css3-conditional-rule...
Lamarque V. Souza
Reported 2013-02-07 12:36:39 PST
Created attachment 187148 [details] Fix build with css3-text and css3-conditiona-rules Because of some changes in commits 78f751a31aa2a23acb4dfc03768821934accff7e and 686b13346a97e637edc3ec071ea7ce1a607649c7 WebKit does not build with css3-text and css3-conditional-rules anymore. The attached patch fixes the problems I have found.
Attachments
Fix build with css3-text and css3-conditiona-rules (1.23 KB, patch)
2013-02-07 12:36 PST, Lamarque V. Souza
no flags
Patch (1.65 KB, patch)
2013-02-07 12:47 PST, Lamarque V. Souza
no flags
Patch (1.60 KB, patch)
2013-02-07 15:14 PST, Lamarque V. Souza
no flags
Lamarque V. Souza
Comment 1 2013-02-07 12:47:34 PST
Created attachment 187151 [details] Patch Proposed patch
Lamarque V. Souza
Comment 2 2013-02-07 15:14:28 PST
Created attachment 187185 [details] Patch Proposed patch
WebKit Review Bot
Comment 3 2013-02-07 16:19:50 PST
Comment on attachment 187185 [details] Patch Clearing flags on attachment: 187185 Committed r142199: <http://trac.webkit.org/changeset/142199>
WebKit Review Bot
Comment 4 2013-02-07 16:19:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.