Fix build when compiling with css3-text and css3-conditional-rules feature flags enabled. https://bugs.webkit.org/show_bug.cgi?id=109217

Patch by Lamarque V. Souza <Lamarque.Souza@basyskom.com> on 2013-02-07
Reviewed by Benjamin Poulain.

* css/InspectorCSSOMWrappers.cpp:
(WebCore::InspectorCSSOMWrappers::collect):

git-svn-id: svn://svn.chromium.org/blink/trunk@142199 bbb929c8-8fbe-4397-9dbb-9b2b20218538