third_party/WebKit/Source/WebCore/css/InspectorCSSOMWrappers.cpp
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "CSSRule.h"
 #include "CSSStyleRule.h"
 #include "CSSStyleSheet.h"
+#include "CSSSupportsRule.h"
 #include "DocumentStyleSheetCollection.h"
 #include "StyleSheetContents.h"
 #include "WebKitCSSRegionRule.h"
@@ -69,7 +70,7 @@ void InspectorCSSOMWrappers::collect(ListType* listType)
             break;
 #if ENABLE(CSS3_CONDITIONAL_RULES)
         case CSSRule::SUPPORTS_RULE:
-            collectCSSOMWrappers(static_cast<CSSSupportsRule*>(cssRule));
+            collect(static_cast<CSSSupportsRule*>(cssRule));
             break;
 #endif
 #if ENABLE(CSS_REGIONS)
